--- a/client/src/components/Dashboard.css
+++ b/client/src/components/Dashboard.css
@@ -1,4 +1,24 @@
 .Dashboard {
     width: 100%;
     height: 100%;
+    min-height: 100vh;
+}
+
+.Main {
+    display: flex;
+    height: calc(100vh - 4.5rem);
+}
+
+.SideBar {
+    flex-basis: 200px;
+    height: 100%;
+    background-color: #F2f2f2;
+    align-self: flex-end;
+}
+
+.Workspace {
+    flex-basis: calc(100% - 200px);
+    height: 100%;
+    background-color: #fff;
+    align-self: flex-end;
 }
