--- a/client/src/components/Landing.css
+++ b/client/src/components/Landing.css
@@ -7,12 +7,12 @@
 
 .TextBox {
     position: absolute;
-    top: 68%;
+    top: 65%;
     left: 70%;
     transform: translate(-50%, -50%);
     background-color: rgba(0, 0, 0, 0.8);
     color: black;
-    padding: 2.5rem;
+    padding: 2rem;
     text-align: right;
     width: 50rem;
     transition: all 1s;
@@ -25,13 +25,20 @@
 }
 
 .HeaderText__brand {
-    font-size: 10rem;
+    font-size: 8rem;
     /* font-family: 'Clicker Script', cursive; */
-    font-style: italic;
-    color: #fff;
+    /* font-style: italic; */
+    background: #fff;
+    color: #000;
+    padding: 2rem 0rem 2rem 2rem;
+    border-radius: 3px;
+    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.8);
     line-height: 1;
+    display: inline-block;
+    width: auto;
     margin: 1rem 1rem;
-    text-shadow: 0 1rem 3rem rgba(255, 255, 255, 0.5);
+    margin-right: 0;
+    margin-left: auto;
     display: block;
     text-transform: none;
 }
@@ -39,18 +46,23 @@
 .Tagline {
     font-size: 3rem;
     margin-bottom: 2rem;
-    text-shadow: 0 1rem 3rem rgba(255, 255, 255, 0.5);
     color: #fff;
 }
 
 .Link,
 .Link:visited {
-    display: block;
+    display: inline-block;
     font-size: 2rem;
     padding: 0;
     margin: .5rem 0;
     text-decoration: none;
     color: #fff;
+    box-sizing: border-box;
+}
+
+.Link:hover {
+    text-decoration: underline;
+    font-weight: bold;
 }
 
 @media(max-width: 600px) {
