--- a/client/src/components/UI/Header/Header.css
+++ b/client/src/components/UI/Header/Header.css
@@ -7,7 +7,7 @@
 .Brand {
     font-size: 2.5rem;
     color: #fff;
-    padding: 1rem 3rem;
+    padding: 1rem 2rem 1rem .5rem;
     display: inline-block;
     margin-right: auto;
 }
@@ -21,4 +21,10 @@
     color: #fff;
     padding: 1rem;
     margin: .2rem 2rem;
+}
+
+.Logo {
+    padding: 1rem .5rem;
+    height: 25px;
+    width: 25px;
 }
