--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width" />
-        <title>TITLE GOES HERE</title>
+        <title>Temporalite: Time Management for Humans</title>
     </head>
     <body>
         <div id="root">
