Refactor Manual Sprint Widget to use Material UI

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width" />
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
         <title>Temporalite: Time Management for Humans</title>
     </head>
     <body>
