--- a/client/src/components/Dashboard.css
+++ b/client/src/components/Dashboard.css
@@ -10,15 +10,17 @@
 }
 
 .SideBar {
-    flex-basis: 200px;
+    flex-basis: 300px;
     height: 100%;
     background-color: #F2f2f2;
     align-self: flex-end;
 }
 
 .Workspace {
-    flex-basis: calc(100% - 200px);
+    flex-basis: calc(100% - 300px);
+    flex-grow: 1;
     height: 100%;
     background-color: #fff;
     align-self: flex-end;
+    overflow-y: scroll;
 }
