Fixed duplicate workspace load; refactored task and day views to use (unstyled) Material UI tables

--- a/client/src/components/Workspace/TaskView/Task/Task.css
+++ b/client/src/components/Workspace/TaskView/Task/Task.css
@@ -1,6 +1,4 @@
 .Task {
-    display: flex;
-    flex-wrap: wrap;
     margin: 2rem 0;
 }
 
@@ -13,4 +11,7 @@
     flex-basis: 25%;
     font-size: 1.5rem;
     text-align: right;
+}
+.ToolBar {
+    padding-right: 2rem;
 }
