Add tasks to projects from the project manager; mobile drawer closes upon selection

--- a/client/src/components/Dashboard.css
+++ b/client/src/components/Dashboard.css
@@ -22,5 +22,6 @@
     height: 100%;
     background-color: #fff;
     align-self: flex-end;
-    overflow-y: scroll;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
