--- a/client/src/components/SprintWorkspace/TaskView/Task/Task.css
+++ b/client/src/components/SprintWorkspace/TaskView/Task/Task.css
@@ -3,15 +3,28 @@
 }
 
 .Name {
-    flex-basis: 75%;
+    flex-basis: 60%;
     font-size: 2rem;
 }
 
 .Duration {
-    flex-basis: 25%;
+    flex-basis: 10%;
     font-size: 1.5rem;
     text-align: right;
 }
 .ToolBar {
     padding-right: 2rem;
+}
+
+.Category {
+    margin: 0 1rem;
+}
+
+.CategoryList {
+    flex-basis: 30%;
+    text-align: right;
+}
+
+.CategoryLabel {
+    color: white;
 }
