--- a/client/src/components/Landing.css
+++ b/client/src/components/Landing.css
@@ -3,6 +3,9 @@
     width: 100%;
     background-size: cover;
     position: relative;
+    outline: none;
+    background-color: transparent;
+    border: none;
 }
 
 .TextBox {
@@ -53,14 +56,17 @@
 
 .Link,
 .Link:visited {
-    display: block;
     cursor: pointer;
+    border: none;
+    background-color: transparent;
+    outline: none;
     font-size: 2rem;
     padding: 0;
     margin: .5rem 0;
     text-decoration: none;
     color: #fff;
     box-sizing: border-box;
+    text-align: right;
 }
 
 .Link:hover {
