--- a/client/src/index.css
+++ b/client/src/index.css
@@ -10,3 +10,11 @@ body {
   padding: 0;
   font-family: "Lato", sans-serif;
 }
+
+a, a:link {
+  text-decoration: none;
+}
+
+a:visited {
+  color: inherit;
+}
