Someslightly improved card styling; starting to pull out processing pipeline into centralized data service

--- a/client/src/components/Dash/dash.css
+++ b/client/src/components/Dash/dash.css
@@ -9,12 +9,15 @@
 }
 
 .cardHeader {
-  padding-bottom: 0 !important;
+  padding-bottom: .5rem !important;
 }
 
 .cardContent {
   padding: 1rem !important;
   padding-top: 0 !important;
+  display: flex;
+  justify-content: center;
+  align-content: center;
 }
 
 .dayStats {
