--- a/client/src/components/Dash/dash.css
+++ b/client/src/components/Dash/dash.css
@@ -44,10 +44,38 @@
   flex-grow: 1;
 }
 
+.teamMenu {
+  height: 100%;
+  width: 100%;
+  display: flex;
+}
+
+.teamMember {
+  flex-basis: 25%;
+  flex-shrink: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .Card {
   min-height: 100%;
   max-height: 100%;
   width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.UserIcon {
+  width: 8.0rem !important;
+  height: 8.0rem !important;
+}
+
+.AccountCircle {
+  flex-basis: 50%;
+  font-size: 8.0rem !important;
+  height: 1em;
+  width: 1em;
 }
 
 @media(max-width: 900px) {
